cmake_minimum_required(VERSION 3.10)
project(FirstApp)

set(CMAKE_CXX_STANDARD 11)

add_executable(BastiLeetCode Ex22_Generate_Parentheses.cpp Ex46_Permutations.cpp Ex55_Jump_Game.cpp Ex62_Unique_Paths.cpp Ex63_Unique_Paths_II.cpp Ex_61_Rotate_List.cpp Ex69_Sqrt_x.cpp
        Ex73_Set_Matrix_Zeroes.cpp Ex74_Search_a_2D_Matrix.cpp Ex66_Plus_One.cpp Ex93_Restore_IP_Addresses.cpp Ex_50_Pow_x_n.cpp Ex80_Remove_Duplicates_from_Sorted_Array_II.cpp)