cmake_minimum_required(VERSION 3.10)
project(FirstApp)

set(CMAKE_CXX_STANDARD 11)

add_executable(BastiLeetCode
        Ex22_Generate_Parentheses.cpp
        Ex46_Permutations.cpp
        Ex55_Jump_Game.cpp
        Ex62_Unique_Paths.cpp
        Ex63_Unique_Paths_II.cpp
        Ex61_Rotate_List.cpp
        Ex69_Sqrt_x.cpp
        Ex73_Set_Matrix_Zeroes.cpp
        Ex74_Search_a_2D_Matrix.cpp
        Ex66_Plus_One.cpp
        Ex93_Restore_IP_Addresses.cpp
        Ex50_Pow_x_n.cpp
        Ex80_Remove_Duplicates_from_Sorted_Array_II.cpp
        Ex91_Decode_Ways.cpp
        Ex100_Same_Tree.cpp
        Ex101_Symmetric_Tree.cpp
        Ex53_Maximum_Subarray.cpp
        Ex67_Add_Binary.cpp
        Ex70_Climbing_Stairs.cpp
        Ex83_Remove_Duplicates_from_Sorted_List.cpp
        Ex88_Merge_Sorted_Array.cpp
        Ex104_Maximum_Depth_of_Binary_Tree.cpp
        Ex107_Binary_Tree_Level_Order_Traversal_II.cpp
        Ex18_4Sum.cpp
        Ex31_Next_Permutation.cpp
        Ex39_Combination_Sum.cpp
        Ex40_Combination_Sum_II.cpp
        Ex89_Gray_Code.cpp
        Ex56_Merge_Intervals.cpp
        Ex416_Partition_Equal_Subset_Sum.cpp
        Ex77_Combinations.cpp
        Ex120_Triangle.cpp
        Ex129_Sum_Root_to_Leaf_Numbers.cpp
        Ex121_2.cpp
        Ex137_Single_Number_II.cpp
        Ex139_Word_Break.cpp
        Ex200_Number_of_Islands.cpp
        Ex198_House_Robber.cpp
        Ex202_Happy_Number.cpp
        Ex287_Find_the_Duplicate_Number.cpp
        Ex41_First_Missing_Positive.cpp
        Ex60_Permutation_Sequence.cpp
        Ex90_Subsets_II.cpp
        Ex91_Decode_Ways.cpp
        Ex82_Remove_Duplicates_from_Sorted_List_II.cpp
        Ex92_Reverse_Linked_List_II.cpp
        Ex127_Word_Ladder.cpp
        Ex111_Minimum_Depth_of_Binary_Tree.cpp
        Ex125_Valid_Palindrome.cpp
        Ex151_Reverse_Words_in_a_String.cpp
        Ex102_Binary_Tree_Level_Order_Traversal.cpp
        Ex108_Convert_Sorted_Array_to_Binary_Search_Tree.cpp
        Ex206_Reverse_Linked_List.cpp
        Ex213_House_Robber_II.cpp
        Ex219_Contains_Duplicate_II.cpp
        Ex227_Basic_Calculator_II.cpp
        Ex241_Different_Ways_to_Add_Parentheses.cpp)